[vibe] i18n 3 + claude fix

--- a/src/locales/en/controls.json
+++ b/src/locales/en/controls.json
@@ -7,16 +7,24 @@
       "providers": "Providers & Models"
     }
   },
+  "rulesAndTags": "Rules & Tags",
+  "rules": "Rules",
+  "tags": "Tags",
+  "alwaysOn": "Always On",
+  "editRule": "Edit Rule",
+  "addNewRule": "Add New Rule",
+  "backToList": "Back to List",
+  "addRule": "Add Rule",
   "rulesModule": {
     "alreadyRegistered": "Already registered. Skipping.",
     "initializationError": "Error initializing module {{id}}:",
     "initializationErrorMessage": "Module Init Error ({{id}}): {{message}}",
     "registrationError": "Error registering module {{id}}:",
-    "registrationErrorMessage": "Module Registration Error ({{id}}): {{message}}",
+    "registrationErrorMessage": "Module Registration Error ({{id}}) : {{message}}",
     "settingsTabTitle": "Rules & Tags",
     "destroyed": "Destroyed.",
     "controlRulesOnly": "Only module-defined control rules can be managed this way.",
-    "cannotDeleteControlRule": "Control rules cannot be deleted.",
+    "cannotDeleteControlRule": "Cannot edit control rule \"{{name}}\". Control rules are managed automatically by modules.",
     "failedToAddRule": "Failed to add rule.",
     "ruleAddedSuccessfully": "Rule added successfully.",
     "failedToUpdateRule": "Failed to update rule.",
