--- a/src/locales/fr/controls.json
+++ b/src/locales/fr/controls.json
@@ -4,36 +4,44 @@
       "assistant": "Assistant",
       "general": "Général",
       "providers": "Fournisseurs et Modèles"
-    },
-    "rulesModule": {
-      "alreadyRegistered": "Déjà enregistré. Ignoré.",
-      "initializationError": "Erreur d'initialisation du module \"{{id}}\":",
-      "initializationErrorMessage": "Erreur d'initialisation du module ({{id}}) : {{message}}",
-      "registrationError": "Erreur d'enregistrement du module \"{{id}}\":",
-      "registrationErrorMessage": "Erreur d'enregistrement du module ({{id}}) : {{message}}",
-      "settingsTabTitle": "Règles et Tags",
-      "destroyed": "Détruit.",
-      "controlRulesOnly": "Seules les règles de contrôle définies par le module peuvent être gérées de cette manière.",
-      "cannotDeleteControlRule": "Les règles de contrôle ne peuvent pas être supprimées.",
-      "failedToAddRule": "Échec de l'ajout de la règle.",
-      "ruleAddedSuccessfully": "Règle ajoutée avec succès.",
-      "failedToUpdateRule": "Échec de la mise à jour de la règle.",
-      "ruleUpdatedSuccessfully": "Règle mise à jour avec succès.",
-      "failedToDeleteRule": "Échec de la suppression de la règle.",
-      "ruleDeletedSuccessfully": "Règle supprimée avec succès.",
-      "failedToAddTag": "Échec de l'ajout du tag.",
-      "tagAddedSuccessfully": "Tag ajouté avec succès.",
-      "failedToUpdateTag": "Échec de la mise à jour du tag.",
-      "tagUpdatedSuccessfully": "Tag mis à jour avec succès.",
-      "failedToDeleteTag": "Échec de la suppression du tag.",
-      "tagDeletedSuccessfully": "Tag supprimé avec succès.",
-      "failedToLinkTagToRule": "Échec de la liaison du tag à la règle.",
-      "tagLinkedSuccessfully": "Tag lié avec succès.",
-      "failedToUnlinkTagFromRule": "Échec de la dissociation du tag de la règle.",
-      "tagUnlinkedSuccessfully": "Tag dissocié avec succès.",
-      "failedToAutoSelectRules": "Échec de la sélection automatique des règles.",
-      "rulesAutoSelectedSuccessfully": "Règles sélectionnées automatiquement avec succès.",
-      "noRulesOrTagsConfigured": "Aucune règle ou tag configuré."
     }
+  },
+  "rulesAndTags": "Règles et Tags",
+  "rules": "Règles",
+  "tags": "Tags",
+  "alwaysOn": "Toujours Activé",
+  "editRule": "Modifier la Règle",
+  "addNewRule": "Ajouter une Nouvelle Règle",
+  "backToList": "Retour à la Liste",
+  "addRule": "Ajouter une Règle",
+  "rulesModule": {
+    "alreadyRegistered": "Déjà enregistré. Ignoré.",
+    "initializationError": "Erreur d'initialisation du module \"{{id}}\":",
+    "initializationErrorMessage": "Erreur d'initialisation du module ({{id}}) : {{message}}",
+    "registrationError": "Erreur d'enregistrement du module \"{{id}}\":",
+    "registrationErrorMessage": "Erreur d'enregistrement du module ({{id}}) : {{message}}",
+    "settingsTabTitle": "Règles et Tags",
+    "destroyed": "Détruit.",
+    "controlRulesOnly": "Seules les règles de contrôle définies par le module peuvent être gérées de cette manière.",
+    "cannotDeleteControlRule": "Impossible de modifier la règle de contrôle \"{{name}}\". Les règles de contrôle sont gérées automatiquement par les modules.",
+    "failedToAddRule": "Échec de l'ajout de la règle.",
+    "ruleAddedSuccessfully": "Règle ajoutée avec succès.",
+    "failedToUpdateRule": "Échec de la mise à jour de la règle.",
+    "ruleUpdatedSuccessfully": "Règle mise à jour avec succès.",
+    "failedToDeleteRule": "Échec de la suppression de la règle.",
+    "ruleDeletedSuccessfully": "Règle supprimée avec succès.",
+    "failedToAddTag": "Échec de l'ajout du tag.",
+    "tagAddedSuccessfully": "Tag ajouté avec succès.",
+    "failedToUpdateTag": "Échec de la mise à jour du tag.",
+    "tagUpdatedSuccessfully": "Tag mis à jour avec succès.",
+    "failedToDeleteTag": "Échec de la suppression du tag.",
+    "tagDeletedSuccessfully": "Tag supprimé avec succès.",
+    "failedToLinkTagToRule": "Échec de la liaison du tag à la règle.",
+    "tagLinkedSuccessfully": "Tag lié avec succès.",
+    "failedToUnlinkTagFromRule": "Échec de la dissociation du tag de la règle.",
+    "tagUnlinkedSuccessfully": "Tag dissocié avec succès.",
+    "failedToAutoSelectRules": "Échec de la sélection automatique des règles.",
+    "rulesAutoSelectedSuccessfully": "Règles sélectionnées automatiquement avec succès.",
+    "noRulesOrTagsConfigured": "Aucune règle ou tag configuré."
   }
 }
