--- a/src/locales/en/canvas.json
+++ b/src/locales/en/canvas.json
@@ -23,5 +23,82 @@
   "noContent": "No content",
   "promptLabel": "Prompt",
   "filesLabel": "Files",
-  "noFiles": "No files"
+  "noFiles": "No files",
+  "streaming": {
+    "completed": "Completed",
+    "thinking": "Thinking...",
+    "generating": "Generating...",
+    "stopped": "Stopped",
+    "error": "Error"
+  },
+  "actions": {
+    "copy": "Copy",
+    "copySuccess": "Copied successfully!",
+    "copyFail": "Failed to copy.",
+    "noContent": "No content to copy or action disabled.",
+    "copyAriaLabel": "Copy content",
+    "regenerate": "Regenerate",
+    "delete": "Delete",
+    "regenerateDisabled": "Regeneration is currently disabled.",
+    "regenerateAriaLabel": "Regenerate Response",
+    "editResponseDisabled": "Response editing is currently disabled.",
+    "editResponse": "Edit Response",
+    "editResponseAriaLabel": "Edit Assistant Response",
+    "responseCannotBeEmpty": "Response cannot be empty",
+    "responseEditedSuccessfully": "Response edited successfully",
+    "responseContent": "Response Content",
+    "editResponsePlaceholder": "Edit the assistant's response...",
+    "cancel": "Cancel",
+    "save": "Save Changes",
+    "forkDisabled": "Fork is currently disabled.",
+    "fork": "Fork",
+    "forkAriaLabel": "Fork Conversation",
+    "forkCompactDisabled": "Fork compact is currently disabled.",
+    "summarize": "Summarize",
+    "forkCompactAriaLabel": "Fork Conversation with Compact Summary",
+    "forkWith": "Fork with",
+    "forkWithModelAriaLabel": "Fork Conversation with Model Selection",
+    "ratings": {
+      "terrible": "Terrible",
+      "veryBad": "Very Bad",
+      "bad": "Bad",
+      "poor": "Poor",
+      "belowAverage": "Below Average",
+      "neutral": "Neutral",
+      "aboveAverage": "Above Average",
+      "good": "Good",
+      "veryGood": "Very Good",
+      "excellent": "Excellent",
+      "perfect": "Perfect",
+      "ariaLabel": "Rate response as {{rating}}"
+    },
+    "regenerateWithModel": "Regenerate with Model",
+    "regenerateWithModelAriaLabel": "Regenerate Response with Model Selection",
+    "codeEditingDisabled": "Code editing is currently disabled.",
+    "missingIdError": "Missing interaction or code block ID",
+    "codeCannotBeEmpty": "Code cannot be empty",
+    "codeEditedSuccessfully": "Code block edited successfully",
+    "save": "Save",
+    "cancel": "Cancel",
+    "editCode": "Edit Code",
+    "editCodeAriaLabel": "Edit code block",
+    "copyCode": "Copy Code",
+    "copyCodeAriaLabel": "Copy code block",
+    "unfoldCode": "Unfold Code",
+    "foldCode": "Fold Code",
+    "unfoldCodeAriaLabel": "Unfold code block",
+    "foldCodeAriaLabel": "Fold code block",
+    "downloadFile": "Download File",
+    "downloadFileAriaLabel": "Download code as file",
+    "downloaded": "Downloaded {{filename}}",
+    "downloadFailed": "Failed to download file",
+    "unfold": "Unfold",
+    "fold": "Fold",
+    "unfoldAriaLabel": "Unfold response",
+    "foldAriaLabel": "Fold response",
+    "noCodeBlocksToDownload": "No code blocks with filepaths found to download",
+    "downloadZip": "Download {{count}} code files as ZIP",
+    "downloadZipAriaLabel": "Download code blocks as ZIP file",
+    "zipDownloadFailed": "Failed to create ZIP file"
+  }
 }
