--- a/src/locales/fr/canvas.json
+++ b/src/locales/fr/canvas.json
@@ -1,1 +1,77 @@
-{}
+{
+  "streaming": {
+    "completed": "Terminé",
+    "thinking": "Réflexion...",
+    "generating": "Génération...",
+    "stopped": "Arrêté",
+    "error": "Erreur"
+  },
+  "actions": {
+    "copy": "Copier",
+    "copySuccess": "Copié avec succès !",
+    "copyFail": "Échec de la copie.",
+    "noContent": "Pas de contenu à copier ou action désactivée.",
+    "copyAriaLabel": "Copier le contenu",
+    "regenerate": "Régénérer",
+    "delete": "Supprimer",
+    "regenerateDisabled": "La régénération est actuellement désactivée.",
+    "regenerateAriaLabel": "Régénérer la réponse",
+    "editResponseDisabled": "La modification de la réponse est actuellement désactivée.",
+    "editResponse": "Modifier la réponse",
+    "editResponseAriaLabel": "Modifier la réponse de l'assistant",
+    "responseCannotBeEmpty": "La réponse ne peut pas être vide",
+    "responseEditedSuccessfully": "Réponse modifiée avec succès",
+    "responseContent": "Contenu de la réponse",
+    "editResponsePlaceholder": "Modifiez la réponse de l'assistant...",
+    "cancel": "Annuler",
+    "save": "Enregistrer les modifications",
+    "forkDisabled": "La duplication est actuellement désactivée.",
+    "fork": "Dupliquer",
+    "forkAriaLabel": "Dupliquer la conversation",
+    "forkCompactDisabled": "La duplication compacte est actuellement désactivée.",
+    "summarize": "Résumer",
+    "forkCompactAriaLabel": "Dupliquer la conversation avec un résumé compact",
+    "forkWith": "Dupliquer avec",
+    "forkWithModelAriaLabel": "Dupliquer la conversation avec sélection de modèle",
+    "ratings": {
+      "terrible": "Très mauvais",
+      "veryBad": "Très Mauvais",
+      "bad": "Mauvais",
+      "poor": "Médiocre",
+      "belowAverage": "Sous la moyenne",
+      "neutral": "Neutre",
+      "aboveAverage": "Au-dessus de la moyenne",
+      "good": "Bon",
+      "veryGood": "Très bon",
+      "excellent": "Excellent",
+      "perfect": "Parfait",
+      "ariaLabel": "Évaluer la réponse comme {{rating}}"
+    },
+    "regenerateWithModel": "Régénérer avec un modèle",
+    "regenerateWithModelAriaLabel": "Régénérer la réponse avec sélection de modèle",
+    "codeEditingDisabled": "La modification du code est actuellement désactivée.",
+    "missingIdError": "ID d'interaction ou de bloc de code manquant",
+    "codeCannotBeEmpty": "Le code ne peut pas être vide",
+    "codeEditedSuccessfully": "Bloc de code modifié avec succès",
+    "editCode": "Modifier le code",
+    "editCodeAriaLabel": "Modifier le bloc de code",
+    "copyCode": "Copier le code",
+    "copyCodeAriaLabel": "Copier le bloc de code",
+    "unfoldCode": "Déplier le code",
+    "foldCode": "Plier le code",
+    "unfoldCodeAriaLabel": "Déplier le bloc de code",
+    "foldCodeAriaLabel": "Plier le bloc de code",
+    "downloadFile": "Télécharger le fichier",
+    "downloadFileAriaLabel": "Télécharger le code en tant que fichier",
+    "downloaded": "Téléchargé {{filename}}",
+    "downloadFailed": "Échec du téléchargement du fichier",
+    "unfold": "Déplier",
+    "fold": "Plier",
+    "unfoldAriaLabel": "Déplier la réponse",
+    "foldAriaLabel": "Plier la réponse",
+    "noCodeBlocksToDownload": "Aucun bloc de code avec chemin de fichier trouvé à télécharger",
+    "downloadZip": "Télécharger {{count}} fichiers de code en ZIP",
+    "downloadZipAriaLabel": "Télécharger les blocs de code en tant que fichier ZIP",
+    "zipDownloadFailed": "Échec de la création du fichier ZIP"
+  }
+}
